# verdanteye

./: .gitignore  README.md  frames_2025-11-01_03.00.46.gv  frames_2025-11-02_03.30.59.gv  frames_2025-11-04_15.02.36.gv
41068_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
41068_ws/install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
41068_ws/install/41068_ignition_bringup/share/41068_ignition_bringup/cmake/: 41068_ignition_bringupConfig-version.cmake  41068_ignition_bringupConfig.cmake
41068_ws/install/41068_ignition_bringup/share/41068_ignition_bringup/config/: 41068.rviz  gazebo_bridge.yaml  nav2_params.yaml  robot_localization.yaml  slam_params.yaml
41068_ws/install/41068_ignition_bringup/share/41068_ignition_bringup/environment/: ament_prefix_path.dsv  path.dsv
41068_ws/log/: latest_build
src/41068_ignition_bringup/config/: 41068.rviz  gazebo_bridge.yaml  nav2_params.yaml  robot_localization.yaml  slam_params.yaml
src/41068_ignition_bringup/launch/: 41068_ignition.launch.py  41068_ignition_drone.launch.py  system.launch.py
src/41068_ignition_bringup/models/bamboo_thicket_GREEN/: model.config  model.sdf
src/41068_ignition_bringup/models/bamboo_thicket_RED/: model.config  model.sdf
src/41068_ignition_bringup/worlds/: large_demo.sdf
src/ve_behaviours/: package.xml  setup.cfg  setup.py
src/ve_behaviours/config/: 41068.rviz  gazebo_bridge.yaml  robot_localization.yaml  wander_params.yaml
src/ve_behaviours/launch/: auto_wander_depth.launch.py  bamboo_randomizer.launch.py  path_view.launch.py  ui.launch.py  wander_launch.py  x3.launch.py  x3_route.launch.py
src/ve_behaviours/maps/: forest.pgm  forest.yaml  forest_map.yaml  my_map.pgm  my_map.yaml
src/ve_behaviours/tools/: plot_path.py
src/ve_behaviours/urdf/: x3.gazebo.xacro  x3.urdf.xacro
src/ve_behaviours/urdf/meshes/: propeller_ccw.dae:Zone.Identifier
src/ve_behaviours/ve_behaviours/: auto_wander_depth.py  bamboo_randomizer.py  maze_wander_node.py  pathplanning.py  plan_markers.py  ui.py  ui_plants.py  wander_node.py  x3_route.py
(+22 files in other folders)
