<?xml version="1.0"?>
<package format="3">
  <name>ve_behaviours</name>
  <version>0.1.0</version>
  <description>Behaviour nodes (wander, UI helpers, etc.)</description>
  <maintainer email="danish.o.silva@student.uts.edu.au">Danish Silva</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
