<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ve_behaviours</name>
  <version>0.1.0</version>
  <description>Behaviour nodes (wander, UI helpers, etc.)</description>
  <maintainer email="danish.o.silva@student.uts.edu.au">Danish Silva</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <depend>ros_ign_interfaces</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend>
  <depend>robot_localization</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
